--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/cdn-img/(.*)",
-      "destination": "https://pollinations.ai/p/$1"
+      "source": "/cdn-img/:path*",
+      "destination": "https://pollinations.ai/p/:path*"
     }
   ]
 }
